<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/step2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.caope.scrollreader.Step2"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:text="@string/button3_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button1"
        android:onClick="back"/>

    <Button
        android:text="@string/button4_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/button2"
        android:onClick="next"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/button1"
        android:weightSum="1">

        <CheckBox
            android:text="@string/checkbox1"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <CheckBox
                android:text="@string/checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox2"
                android:layout_weight="2" />

            <Spinner
                android:layout_weight="1"
                android:entries="@array/translate_array"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner" />

            <Spinner
                android:layout_weight="1"
                android:entries="@array/sharp_flat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner2" />
        </LinearLayout>


        <CheckBox
            android:text="@string/checkbox3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox3" />

    </LinearLayout>

</RelativeLayout>
